fix: horizontal scrollbar & profile edit router.back() issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,5 +21,4 @@ body {
   justify-content: center;
   align-items: center;
   height: 100%;
-  overflow-x: hidden;
 }
